# discord-webhook-configurator

./: Cargo.toml
.github/workflows/: actionlint.yml  validate-renovate.yml
